@@ -22,7 +22,7 @@ os.chdir('../query')
 print('\nRunning update2 test\n')
 print(check_output(['/Library/Frameworks/Python.framework/Versions/3.5/bin/python3.5', 'testCases.py']).decode('utf-8'))
 os.chdir('../..')
-print('\nRunning func_test test\n')
+print('\nRunning grammar_functest test\n')
 print(check_output(['/Library/Frameworks/Python.framework/Versions/3.5/bin/python3.5', 'grammar_functest.py']).decode('utf-8'))
 print('\nRunning func_unittest test\n')
 print(check_output(['/Library/Frameworks/Python.framework/Versions/3.5/bin/python3.5', 'func_unittest.py']).decode('utf-8'))
